--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,9 @@
   "author": "Vineet Mali DEV",
   "license": "ISC",
   "description": "",
+  "engines": {
+    "node": ">=20"
+  },
   "dependencies": {
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
